--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
     "version": 2,
+    "env": {
+        "MONGO_CONFIG":"mongodb+srv://admin:admin@cluster0.z5iogdn.mongodb.net/"
+    },
     "builds": [
         {
             "src":"src/main.ts",
