--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "@skillmine-dev-public/config-resolver-util": "^1.0.6",
     "@skillmine-dev-public/random-id-generator-util": "^1.1.0",
     "@skillmine-dev-public/response-util": "^1.0.15",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "flatted": "^3.3.1",
     "mongoose": "^6.12.9",
     "path": "^0.12.7",
+    "razorpay": "^2.9.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "uuid-pure": "^1.0.10"
