--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_CONFIG = "mongodb+srv://admin:admin@cluster0.z5iogdn.mongodb.net/"
-key_id = "rzp_test_zMtvVKMTbFH4X1"
-key_secret = "Y3PuN5iCfahIMANQBqiMA8lH"
+key_id = "rzp_test_4LfkATq0obcnuz"
+key_secret = "iRueylZqoJHKf2wyEc7R3lDL"
