--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "flatted": "^3.3.1",
+    "form-data": "^4.0.0",
+    "from": "^0.1.7",
+    "fs": "^0.0.1-security",
+    "import": "^0.0.6",
     "mongoose": "^6.12.9",
     "path": "^0.12.7",
     "razorpay": "^2.9.4",
