check sum verification

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_CONFIG = "mongodb+srv://admin:admin@cluster0.z5iogdn.mongodb.net/"
 key_id = "rzp_test_4LfkATq0obcnuz"
 key_secret = "iRueylZqoJHKf2wyEc7R3lDL"
+Bearer_Secret = "qM5tv66Rhk8Tm13DlvDkc92KNwVMvAhOuljLB8tA"
