changed payment gateway integration to razorpay

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_CONFIG = "mongodb+srv://admin:admin@cluster0.z5iogdn.mongodb.net/"
-key_id = "rzp_test_4LfkATq0obcnuz"
-key_secret = "iRueylZqoJHKf2wyEc7R3lDL"
+key_id = "rzp_test_Os0xGiUl4xP5xB"
+key_secret = "Tm1FIpc8oEzosTrmkx23Rwbf"
 Bearer_Secret = "qM5tv66Rhk8Tm13DlvDkc92KNwVMvAhOuljLB8tA"
