--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "from": "^0.1.7",
     "fs": "^0.0.1-security",
     "import": "^0.0.6",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^6.12.9",
     "path": "^0.12.7",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
